--- a/src/components/Menu.style.css
+++ b/src/components/Menu.style.css
@@ -3,39 +3,59 @@
 
 .search-div{
     /* background-color: aqua; */
-    width: 90%;
+    width: 100%;
     /* margin: 0px 30px; */
     /* margin-left: 30px; */
     position: relative;
 }
 .search-div i{
     position: absolute;
-    left: 2%;
-    top: 30%;
-    opacity: 0.7;
+    right: -3.5%;
+    border-radius: 0px 5px 5px 0px;
+    top: 0%;
+    /* opacity: 0.7; */
+    color: white;
+    padding: 15px;
+    background-color: #3f51b5;
 }
 .search-div input{
     border: 1px solid #ccc;
-    padding: 15px 10px ;
+    padding: 15px 0px ;
+    padding-right: 0%;
     width: 100%;
     outline: none;
-    padding-left: 35px;
+    padding-left: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22);
+
 
 }
+.search-div input::placeholder{
+   font-family: sans-serif;
+    /* --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; */
+    /* --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; */
+}
+
 
 .cocktails-suggestion{
     position: absolute;
     top: 100%;
     background-color: white;
     border: 1px solid gray;
-    width: 110%;
+    width: 103%;
     z-index: 9;
+    border-radius: 4px;
     cursor: pointer;
     overflow-y: scroll;
     height: 250px;
 }
+
+.cocktails-suggestion p{
+    margin: 0%;
+    padding: 10px;
+}
 .cocktails-suggestion p:hover,.ordinary-drinks-suggestion p:hover{
-    background-color: #ccc;
+    background-color: #3f51b5;
 }
 .ordinary-drinks-suggestion{
     
@@ -54,7 +74,7 @@
 .cocktail-menu {
     /* background-color: aquamarine; */
     position: relative;
-    width: 450px;
+    width: 550px;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
@@ -67,8 +87,9 @@
     font-size: larger;
     padding: 8px;
 
-    /* background-color: orangered; */
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: white;
+    font-family: 'Mulish', sans-serif;
+
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22);
 
 }
@@ -152,7 +173,7 @@ h4{
     position: relative;
 }
 .top-div button {
-    background-color: palevioletred;
+    background-color: #3f51b5;
     /* border: 1px solid white; */
     padding: 10px;
     border: none;
@@ -165,15 +186,17 @@ h4{
     cursor: pointer;
 }
 .add-button{
-    background-color: palevioletred;
+    /* background-color: #3f51b5; */
     /* border: 1px solid white; */
-    padding: 10px;
+    padding: 5px 10px;
     border: none;
     position: absolute;
     right: 2%;
-    top: 60%;
-    border-radius: 3px;
-    color: white;
+    top: 15%;
+    border-radius: 5px;
+    color: black;
+    background-color: white;
+    border: 1px solid rgb(124, 124, 124);
     box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.22);
     cursor: pointer;
 }
@@ -197,15 +220,20 @@ hr{
 }
 .details{
     font-size: 15px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    font-family: 'Mulish', sans-serif;
 }
 .details h5{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    font-family: 'Mulish', sans-serif;
     margin: 0%;
+    color: black;
 }
 .details h4{
     margin-bottom: 10px;
     margin-top: 5px;
+    color: #3f51b5;
+}
+i{
+    color: black;
 }
 .ingredients{
     padding-left: 20px;
@@ -273,17 +301,26 @@ hr{
     z-index: 9 !important;
     cursor: pointer;
     padding: 0px;
-    /* box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22); */
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22);
     border-radius: 5px;
 }
-.single-drink{
-    margin-left: 10px;
-        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22);
+.drink-category p{
+    margin: 0%;
+    padding-top: 10px;
+    text-align: center;
+}
 
+.single-drink{
+    margin-left: 0px;
+    padding-bottom: 10%;
+
+        /* box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22); */
+    border-bottom: 1px solid #ccc;
 }
 .single-drink:hover{
-    background-color: #ccc;
-    color:white ;
+    background-color: #3f51b5;
+    color:black ;
+    transform: scale(1.02);
 }
 
 .menue-section{
@@ -293,7 +330,7 @@ hr{
     flex-direction: row;
     /* background-color: aqua; */
     justify-content: flex-start;
-    gap: 200px;
+    gap: 10%;
     /* width: fit-content; */
     padding: 30px;
     /* position: sticky; */
@@ -304,6 +341,7 @@ hr{
     /* overflow-y: hidden !important; */
     /* height: 500px; */
     z-index: 9;
+    background-color: #f3f7f8;
 }
 .left-side-menu{
     background-color: white;
@@ -315,6 +353,8 @@ hr{
     width: 20%;
     padding: 20px;
     font-size: larger;
+    font-family: 'Mulish', sans-serif !important;
+    
 }
 .ctegory-div{
     position: relative;
@@ -322,7 +362,10 @@ hr{
     /* background-color: blueviolet; */
 }
 .category-title:hover{
-    opacity: 0.5;
+    /* opacity: 0.5; */
+    background-color: #3f51b5;
+    border-radius: 5px;
+    padding: 10px;
 }
 .category-title{
     display: flex;
@@ -349,5 +392,13 @@ hr{
 
 }
 .left-side-menu p{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+}
+
+h1{
+    /* background-color: #3f51b5; */
+    margin-top: 8%;
+    font-family: 'Mulish', sans-serif;
+    font-size: 1.5vw;
+    font-weight: 100;
 }
